--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,20 @@
 @import "tw-animate-css";
 @import './styles/styles.css';
 
+/* src/index.css */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
+
+:root {
+    --font-main: 'Montserrat', sans-serif;
+}
+
+html,
+body {
+    font-family: var(--font-main);
+}
+
 body {
     background-color: #0f172a;
-    font-family: 'Inter', sans-serif;
     overflow: hidden;
     color: #f8fafc;
 }
